---
source: crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#category\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.category\" ]\n    4 [ label = \"Product.id\" ]\n    5 [ label = \"Root#name\", color=royalblue,shape=parallelogram ]\n    6 [ label = \"Query.products\" ]\n    7 [ label = \"Product.name\" ]\n    8 [ label = \"Root#price\", color=royalblue,shape=parallelogram ]\n    9 [ label = \"Query.products\" ]\n    10 [ label = \"Product.price\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 6 [ label = \"\" ]\n    6 -> 7 [ label = \"\" ]\n    0 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 9 [ label = \"\" ]\n    9 -> 10 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#category" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.category" ]
    4 [ label = "Product.id" ]
    5 [ label = "Root#name" ]
    6 [ label = "Query.products" ]
    7 [ label = "Product.name" ]
    8 [ label = "Root#price" ]
    9 [ label = "Query.products" ]
    10 [ label = "Product.price" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "QueryPartition" ]
    5 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "Field" ]
    0 -> 8 [ label = "QueryPartition" ]
    8 -> 9 [ label = "Field" ]
    9 -> 10 [ label = "Field" ]
}
